[package]
name = "libp2p-portforwarding"
version = "0.0.1"
edition = "2021"
description = """
An example for building portforwarding over libp2p with gossipsip messages
"""
rust-version = "1.67"
license = "Apache-2.0 OR MIT"
authors = ["Vasantha kumar"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid =  {version = "1.4.1" , features = ["v4"]}
env_logger = "0.10"
libp2p-helper = { default-features = false, version = "0.6", features = [
    "gossipsub",
] }
libp2p-noise = { version = "0.43" }
libp2p = { version = "^0.52.3", features = ["full"] }
async-std = { version = "1.12", features = ["attributes"] }
libp2p-identity = {version = "0.2.3"}
# ibp2p_quic = {}
hyper = { version = "1.0.0-rc.3", features = ["full"] }
tokio = { version = "1", features = ["full"] }
pretty_env_logger = "0.5"
http-body-util = "0.1.0-rc.2"
bytes = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.2"
http = "0.2"
futures-util = { version = "0.3", default-features = false, features = ["alloc"] }
futures = { version = "0.3" }
futures-timer = "3.0"
anyhow = { version = "1" }
thiserror = "1.0"
rustyline-async = "0.3"
crypto-seal = "0.2"
clap = { version = "4.1", features = ["derive"] }
bs58 = "0.4"
sha2 = "0.10"
void = "1.0"
libp2p-nat = "0.2"
tokio-util = "0.7.8"
bincode = "1.3"
[dev-dependencies]
tokio-util = { version = "0.7", features = ["codec"] }